Fix alignment of + buttons with down arrow

--- a/app/client/src/assets/styles/tailwind.css
+++ b/app/client/src/assets/styles/tailwind.css
@@ -19,7 +19,7 @@
 }
 
 .add-action {
-  @apply absolute right-[-16px];
+  @apply absolute right-[-14px];
 }
 
 .add-action:hover:not(.disabled) {
